--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
 			<artifactId>feign-micrometer</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
