--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,6 +1,7 @@
-job-service.url=http://localhost:8082
-company-service.url=http://localhost:8083
-review-service.url=http://localhost:8084
+job-service.url=http://job:8082
+company-service.url=http://company:8083
+review-service.url=http://review:8084
+
 
 spring.application.name=review-service
 server.port=8084
@@ -14,7 +15,7 @@ server.port=8084
 
 # PostgreSQL
 
-spring.datasource.url=jdbc:postgresql://localhost:5000/company
+spring.datasource.url=jdbc:postgresql://postgres:5432/company
 spring.datasource.username=postgres
 spring.datasource.password=mysql
 spring.jpa.database=POSTGRESQL
@@ -24,12 +25,13 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #Eureka
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://servicereg:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 # Zipkin
 
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
 
 # RabbitMQ
